hd-62 - Open API spec for list political parties
