# src/app/Http/Controllers/api/v1/admin/PoliticalPartyController.php
@@ -20,6 +20,53 @@ class PoliticalPartyController extends Controller
      * the amount of parties per page is 20.
      *
      * @return JsonResponse
+     *
+     * @OA\Get(
+     *     path="/api/v1/admin/political-party?page=1",
+     *     tags={"Admin - Political Party"},
+     *     summary="List of the political parties",
+     *     description="List of the political parties",
+     *     operationId="listPoliticalParties",
+     *     security={{ "bearer": {} }},
+     *     @OA\Response(
+     *         response=200,
+     *         description="List of political parties",
+     *         @OA\JsonContent(
+     *              required={"email","password"},
+     *              @OA\Property(property="data", type="array", example={{"id": "MIPA2", "name": "Mi partido", "description": "Description del partido", "political_position": {"id": "CEN","name": "Centro", "description": "Se conoce por centro ..."}}, {"id": "MIPAR", "name": "Mi partido", "description": "Description del partido", "political_position": {"id": "CEN","name": "Centro", "description": "Se conoce por centro ..."}}},
+     *                  @OA\Items(
+     *                      @OA\Property(property="id", type="string", format="text", example="CECOL"),
+     *                      @OA\Property(property="name", type="string", format="email", example="Centro Colombia"),
+     *                      @OA\Property(property="description", type="string", format="text", example="Descripcion de centro colombia"),
+     *                      @OA\Property(
+     *                          property="political_position",
+     *                          type="array",
+     *                          example={"id": "CEN","name": "Centro", "description": "Se conoce por centro ..."},
+     *                          @OA\Items(
+     *                              @OA\Property(property="id", type="string", example="CEN"),
+     *                              @OA\Property(property="name", type="string", example="Centro"),
+     *                              @OA\Property(property="description", type="string", example="Se conoce por centro ...")
+     *                          ),
+     *                      ),
+     *                  ),
+     *              ),
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthenticated",
+     *         @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", format="text", example="Unauthenticated"),
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=403,
+     *         description="User without permission to thi endpoint",
+     *         @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", format="text", example="Permission denied."),
+     *         ),
+     *     ),
+     * )
      */
     public function index(): JsonResponse
     {
